# tasmet

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OldMakefile  README.md  __init__.py  basefuncs.py  cleancmake  continuityeq.cpp  continuityeq.h  cytube.cpp  cytube.pxd  cytube.pyx  doubletube.pyx  enginetest.cpp  gasvar.cpp  gasvar.h  globalconf.cpp  globalconf.h  gui_test.cpp  hbm.nja  heateq_vertplates.cpp  heateq_vertplates.h  index.html  inlinefcn.h  install_local.py  isentropictube.cpp  isentropictube.h  linsolver.cpp  linsolver.h  lintube.cpp  lintube.h  lintube.py  lintube_python.cpp  lintube_python.pyx  lintubefv.cpp  lintubefv.h  log.conf  logger.cpp  (+47 more)
bla/: tube.py
cmake/: FindCython.cmake  UseCython.cmake
doc/: Doxyfile  gas_spring.lyx  usg.lyx
fubini/: fubini.h
geom/: conetube.cpp  conetube.h  geom.cpp  geom.h  grid.cpp  grid.h  localgeom.cpp  localgeom.h  vertplates.cpp  vertplates.h
gui/: guibase.cpp  tmtubes.cpp  tmtubes.h
include/: isentropictube.h  pytube.pxi  pytube.pyx  tasystem.h
mat/: materials.c  materials.pyx
models/: atchley_engine.cpp  conetube.cpp  conetube.h  fubini.cpp  fubini.h  fubini_fullenergy.cpp  fubini_fullenergy.h  models.h  simpletube.cpp  threetubes.cpp  threetubes.h  threetubes_conduction.cpp  threetubes_engine.cpp  threetubes_engine_driven.cpp
multiprocessing/: class.py  terminating.py  tut1.py
old/: gridpoint.py  pressure bc temp  testbc.py  testbc_constantcs.py  testlinbc.py  tube_constantcs.py  var.py
post/: __init__.py  particle_tracker.py  post.py
seg/: bcvertex.cpp  bcvertex.h  equation.cpp  equation.h  geom.cpp  geom.h  geomhelpers.cpp  geomhelpers.h  grid.cpp  grid.h  jacobian.cpp  jacobian.h  localgeom.cpp  localgeom.h  seg.cpp  seg.h  segbase.cpp  segbase.h  vertex.cpp  vertex.h
sol/: solver.cpp  solver.h  solverconfiguration.h  solverinstance.cpp  solverinstance.h
src/: CMakeLists.txt  TaSMET.py  constants.cpp  constants.h  nonlinPYTHON_wrap.cxx  utils.h
src/duct/: duct.cpp  duct.h  ductwithsolid.cpp  ductwithsolid.h  isentropictube.cpp  isentropictube.h  laminarduct.cpp  laminarduct.h  stack.cpp  stack.h
src/duct/cell/: bccell.cpp  bccell.h  cell.cpp  cell.h  leftcell.cpp  leftcell.h  rightcell.cpp  rightcell.h
src/duct/connectors/: adiabaticwall.cpp  adiabaticwall.h  ductbc.cpp  ductbc.h  ductconnector.cpp  ductconnector.h  impedancebc.cpp  impedancebc.h  isotwall.cpp  isotwall.h  prescribeqty.cpp  prescribeqty.h  pressurebc.cpp  pressurebc.h  velocitybc.cpp  velocitybc.h
src/duct/drag/: drag.cpp  drag.h  laminardrag.cpp  laminardrag.h
src/duct/eq/: continuity.cpp  continuity.h  ductequation.cpp  ductequation.h  energy.cpp  energy.h  isentropic.cpp  isentropic.h  momentum.cpp  momentum.h  mu.cpp  mu.h  solidenergy.cpp  solidenergy.h  soltw.cpp  soltw.h  state.cpp  state.h  weightfactors.cpp  weightfactors.h
src/duct/eq/solid/: solidh.cpp  solidh.h
src/duct/geom/: conetube.cpp  conetube.h  geom.cpp  geom.h  localgeom.cpp  localgeom.h  vertplates.cpp  vertplates.h
src/duct/geom/grid/: boundarylayer.cpp  boundarylayer.h  grid.cpp  grid.h
src/duct/heat/: heat.cpp  heat.h  hopkinsheat.cpp  hopkinsheat.h
src/gui/: gui.cpp  gui.h  guibase.h  tasmet_main.py  tasmet_modelbuilder_ui.ui  tasmet_modelclass.py  tmtubesgui.fbp
src/mech/: ductpistonconnector.cpp  ductpistonconnector.h  mechbc.cpp  mechbc.h  piston.cpp  piston.h  tubepistonconnector.cpp  tubepistonconnector.h
src/python/: __init__.py
src/python/gui/: __init__.py  tasmet_main.py  tasmet_main_ui.ui
src/python/post/: __init__.py
src/seg/: connector.h  pos.h  seg.cpp  seg.h  segconbase.cpp  segconbase.h
src/sol/: errorvals.h  solprogress.cpp  solprogress.h  solver.cpp  solver.h  solverconfiguration.h  solverinstance.cpp  solverinstance.h
src/swig/: nonlin.i
src/sys/: enginesystem.cpp  enginesystem.h  globalconf.cpp  globalconf.h  jaccol.cpp  jaccol.h  jacobian.cpp  jacobian.h  jacrow.cpp  jacrow.h  phaseconstraint.h  pickadof.h  segconnection.h  tasystem.cpp  tasystem.h  triplets.cpp  triplets.h
src/tube/: hopkinslaminarduct.cpp  hopkinslaminarduct.h  isentropictube.cpp  isentropictube.h  laminarduct.cpp  laminarduct.h  tube.cpp  tube.h
src/tube/bc/: adiabaticwall.cpp  adiabaticwall.h  bc.h  impedancebc.cpp  impedancebc.h  isotwall.cpp  isotwall.h  twimpedance.cpp  twimpedance.h
src/tube/cell/: bccell.cpp  bccell.h  cell.cpp  cell.h  leftcell.cpp  leftcell.h  rightcell.cpp  rightcell.h  tubebcvertex.cpp  tubevertex.cpp
src/tube/con/: adiabaticwall.cpp  adiabaticwall.h  isotwall.cpp  isotwall.h  prescribeqty.cpp  prescribeqty.h  pressurebc.cpp  pressurebc.h  tubebc.cpp  tubebc.h  tubeconnector.cpp  tubeconnector.h
src/tube/connector/: tubeconnector.h
src/tube/drag/: drag.cpp  drag.h  laminardrag.cpp  laminardrag.h
src/tube/eq/: continuity.cpp  continuity.h  energy.cpp  energy.h  isentropic.cpp  isentropic.h  mH.cpp  mH.h  momentum.cpp  momentum.h  mu.cpp  mu.h  solidenergy.cpp  solidenergy.h  soltw.cpp  soltw.h  state.cpp  state.h  tubeequation.cpp  tubeequation.h  weightfactors.cpp  weightfactors.h
src/tube/eq/solid/: solidh.cpp  solidh.h
src/tube/geom/: conetube.cpp  conetube.h  geom.cpp  geom.h  localgeom.cpp  localgeom.h  vertplates.cpp  vertplates.h
src/tube/geom/grid/: boundarylayer.cpp  boundarylayer.h  grid.cpp  grid.h
src/tube/heat/: heat.cpp  heat.h  hopkinsheat.cpp  hopkinsheat.h
src/tube/tubecon/: adiabaticwall.cpp  adiabaticwall.h  impedancebc.cpp  impedancebc.h  isotwall.cpp  isotwall.h  prescribeqty.cpp  prescribeqty.h  pressurebc.cpp  pressurebc.h  tubebc.cpp  tubebc.h  tubeconnector.cpp  tubeconnector.h  velocitybc.cpp  velocitybc.h
src/tube/vertex/: lefttubevertex.cpp  lefttubevertex.h  righttubevertex.cpp  righttubevertex.h  tubebcvertex.cpp  tubebcvertex.h  tubevertex.cpp  tubevertex.h  varnr.h
src/var/: var.cpp  var.h  varutils.cpp  varutils.h
src/volume/: connectorvolume.cpp  connectorvolume.h
swig/: gc.i
sys/: enginesystem.cpp  enginesystem.h  globalconf.cpp  globalconf.h  globalsys.h  jacobian.cpp  jacobian.h  pickadof.h  runsystem.cpp  segconnection.cpp  (+10 more)
(+134 files in other folders)
